Fixed poperties text box overflowing issue

--- a/src/Components/Dashboard/CreateNFT/createNft.module.css
+++ b/src/Components/Dashboard/CreateNFT/createNft.module.css
@@ -14,6 +14,11 @@
   }
 }
 
+.modal__body__wrapper .form__group .form__group__inner input {
+  width: 100%;
+  margin: 5px;
+}
+
 .initial__nft__modal button:focus {
   outline: none;
 }
